--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "on.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/KaisarCode/js-on.git"
+    "url": "https://github.com/kaisarsnippets/js-on.git"
   },
   "keywords": [
     "event listener"
@@ -13,7 +13,7 @@
   "author": "KaisarCode",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/KaisarCode/js-on/issues"
+    "url": "https://github.com/kaisarsnippets/js-on/issues"
   },
-  "homepage": "https://github.com/KaisarCode/js-on"
+  "homepage": "https://github.com/kaisarsnippets/js-on"
 }
